desugn ready for Ipad  :: why section center align  :: why center picter issue resilve  :: about arrow issue resolve  :: footer link issue resolve  :: feature-2 issue resolve  :: video updated

--- a/css/dizruptiv.css
+++ b/css/dizruptiv.css
@@ -130,6 +130,57 @@ section img{
     padding-right: 30px;
 }
 
+/*Only for IPAD*/
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  {
+
+    .why-child img{
+        width: 60px !important;
+        /*padding: 0px !important;*/
+    }
+
+    .guarantee-list img{
+        padding-top: 20px;
+        width: 100%;
+    }
+    .nav-item{
+        /*background: transparent !important;*/
+    }
+    .book{
+        padding-top: 0px !important;
+    }
+
+    .grad1-left h2{
+        padding-top: 50px !important;
+    }
+
+    .grad1-right{
+        margin-top: 20px !important;
+    }
+
+    .about-arrow{
+        width: 20% !important;
+    }
+
+    .navbar-nav {
+        background: transparent !important;
+    }
+    .nav-item{
+        color: white  !important;
+    }
+
+    .footer-link{
+        background-color: #1D1D1D !important;
+    }
+
+}
+
+
+
+
+
 /*Only for Mobile*/
 @media only screen and (max-width: 768px) {
 
@@ -192,7 +243,7 @@ section img{
     height: 160px !important;
     }
     .footer-link{
-        background-color: #3A3A3A !important;
+        background-color: #3A3A3A ;
         height: 80px !important;
         text-align: center !important;
         margin-left: 0px !important;
@@ -210,7 +261,7 @@ section img{
         text-align: center !important;
     }
     .book{
-        padding-top: 20px !important;
+        padding-top: 20px ;
         padding-bottom: 30px !important;
     }
     .parent-box{
@@ -237,8 +288,12 @@ section img{
     }
     .nav-link
     {
-        color: rgba(0,0,0,.75) !important;
+
         text-align: center;
+    }
+
+    .nav-mobile-color{
+        color: rgba(0,0,0,.75)  ;
     }
 
     .team-img{
@@ -287,6 +342,10 @@ section img{
     }
 
     .why-child img{
+
+    }
+
+    .why-mobile-img{
         width: 30% !important;
     }
 
@@ -328,7 +387,7 @@ section img{
     }
 
     .about-arrow{
-        width: 100% !important;
+        width: 100% ;
     }
 
     .feature-item{
@@ -364,8 +423,17 @@ section img{
     }
 
     .why-child{
-        margin-left: 15px !important;
-        margin-right: 15px !important;
+        /*margin-left: 15px !important;*/
+        /*margin-right: 15px !important;*/
+    }
+
+    .margin-r{
+        margin-right: 10px !important;
+        margin-left: -10px !important;
+    }
+
+    .margin-l{
+        margin-left: 10px !important;
     }
 
     .nav-item, .nav-link
@@ -380,7 +448,7 @@ section img{
     }
 
     .grad1-right{
-        margin-top: -70px !important;
+        margin-top: -70px ;
     }
 
     .why{
@@ -794,6 +862,8 @@ footer a:hover{
     font-stretch: normal;
     line-height: 1.57;
     letter-spacing: 0.7px;
+    text-align: right;
+    padding-right:5% !important;
     color: #ffffff !important;
 }
 
@@ -853,6 +923,8 @@ footer a:hover{
 .guarantee-list{
     padding-top: 40px;
 }
+
+
 .guarantee-des p{
     font-size: 16px;
     /*font-family: Montserrat;*/
